# socol_install

./: README.md  do_install.sh  do_install_aocc.sh  do_install_cray.sh  env_vars.sh  get_libs.sh  install_libs.sh  modules.sh  settings.sh
artefacts/: TODO.md  configure.ac  configure_socol_lumi  configure_socol_lumi_aocc  configure_socol_lumi_cray  modules_aocc  modules_gnu
artefacts/modulefiles/socol/: gnu2309.lua  testing.lua
downloads/cdo-2.2.0/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  OPERATORS  README  acinclude.m4  aclocal.m4  cdo.settings.in  cdo.spec  cdo.spec.in  configure  configure.ac
downloads/cdo-2.2.0/config/: default
downloads/cdo-2.2.0/contrib/: Makefile.am  Makefile.in  cdoCompletion.bash  cdoCompletion.tcsh  cdoCompletion.zsh  makecompl.rb
downloads/cdo-2.2.0/libcdi/: ChangeLog  LICENSE  Makefile.in  NEWS  aclocal.m4  configure  configure.ac
downloads/cdo-2.2.0/libcdi/app/: Makefile.in  cdi.c
downloads/cdo-2.2.0/libcdi/examples/: Makefile.in  cdi_write_const.c
downloads/cdo-2.2.0/libcdi/examples/pio/: Makefile.in
downloads/cdo-2.2.0/libcdi/interfaces/: Makefile.in
downloads/cdo-2.2.0/libcdi/interfaces/python/: Cdi.py  cdi_wrapper.cpp
downloads/cdo-2.2.0/libcdi/interfaces/ruby/: cdi_wrapper.cpp
downloads/cdo-2.2.0/libcdi/src/: Makefile.am  Makefile.in  cdf_int.c  cdf_int.h  cdf_write.c  cdi.h  cdi.inc  cdiFortran.c  cdi_datetime.c  cdi_query.c  cdilib.c  cdipio.inc  cgribexlib.c  config.h.in  dmemory.h  extralib.c  file.c  gribapi.h  gribapi_utilities.c  grid.c  julian_date.c  mo_cdi.f90  namespace.c  resource_handle.c  stream.c  stream_cdf.h  stream_cdf_i.c  stream_cdf_o.c  stream_cgribex.c  stream_cgribex.h  stream_gribapi.c  stream_record.c  table.c  vlist.c  vlist_var.c  vlist_var_key.c  zaxis.c
downloads/cdo-2.2.0/libcdi/tests/: Makefile.in  cksum_verify.c  test_byteswap.c  test_grib.c  test_resource_copy.c  test_table.c
downloads/cdo-2.2.0/m4/: acx_options.m4
downloads/cdo-2.2.0/src/: Adisit.cc  Afterburner.cc  Arith.cc  Arithc.cc  Arithdays.cc  Arithlat.cc  Bitrounding.cc  CDIread.cc  CDItest.cc  CDIwrite.cc  CMOR.cc  CMOR_lite.cc  CMOR_table.cc  Cat.cc  Change.cc  Change_e5slm.cc  Cloudlayer.cc  Collgrid.cc  Command.cc  Comp.cc  Compc.cc  Complextorect.cc  Cond.cc  Cond2.cc  Condc.cc  Consecstat.cc  Copy.cc  DCW_util.cc  Dayarith.cc  Deltat.cc  Deltime.cc  Depth.cc  Derivepar.cc  Detrend.cc  Diff.cc  Distgrid.cc  Duplicate.cc  EOFs.cc  EcaEtccdi.cc  EcaIndices.cc  (+446 more)
downloads/cdo-2.2.0/src/json/: jsmn.c  jsmn.h
downloads/cdo-2.2.0/src/kdtreelib/: kdtree.h  kdtree_cartesian.cc  kdtree_common.cc  kdtree_spherical.cc  pmergesort.cc  pqueue.cc  pqueue.h  qsort.cc
downloads/cdo-2.2.0/src/lib/gradsdes/: Makefile.am  Makefile.in  gradsdes.c  gradsdes.h
downloads/cdo-2.2.0/src/lib/healpix/: Makefile.am  Makefile.in
downloads/cdo-2.2.0/src/lib/ncl/: Makefile.am  Makefile.in
downloads/cdo-2.2.0/src/lib/yac/: Makefile.am  Makefile.in  area.c  bnd_circle.c  check_overlap.c  clipping.c  clipping.h  geometry.h  grid.h  grid_cell.c  intersection.c  sphere_part.c  sphere_part.h  utils.c  utils.h  yac_ld_interface.h  yac_version.h
downloads/cdo-2.2.0/src/mpim_grid/: grid_convert.h  grid_healpix.cc  grid_healpix.h  grid_proj.cc  grid_proj.h  grid_rot.cc  grid_rot.h  gridreference.cc  gridreference.h  mpim_grid.cc  mpim_grid.h
downloads/cdo-2.2.0/test/: cdoTestFunctions.test.in
downloads/cdo-2.2.0/test/bandit_tests/: Makefile.am  Makefile.in  Seltime_test.cc  module_definitions.cc  module_interface.cc  param_conversion_test.cc  parser.cc  process_init.cc  util_string.cc  wildcards.cc
downloads/cdo-2.2.0/test/data/: Makefile.am  Makefile.in  VCT.L62  adipot_ref  adisit_ref  aexpr1_ref  aexpr2_ref  aexpr3_ref  ap2pl_ref  ap_l47.nc  arith1.srv  arith2.srv  arith2add_ref  arith2div_ref  arith2mean.srv  arith2mul_ref  arith2sub_ref  arithadd_ref  arithdiv_ref  arithmask.srv  arithmul_ref  arithsub_ref  bandpass_ref  bottomvalue_ref  comp_eqc_ref  comp_gtc_ref  comp_ltc_ref  comp_nec_ref  comptest.srv  datac.nc  datag.nc  datar.nc  datau.nc  dayadd_ref  dayavgm_ref  daydiv_ref  daymax_ref  daymaxm_ref  daymean_ref  daymeanm_ref  (+529 more)
downloads/cdo-2.2.0/test/executeOnly/: Makefile.am  Makefile.in  README  Splitsel.test.in
downloads/cdo-2.2.0/test/pytest/: Adisit.py.test.in  Afterburner.py.test.in  Arith.py.test.in  Arith_extra.py.test.in  Arithc.py.test.in  CMOR.py.test.in  Cat.py.test.in  Change.py.test.in  Collgrid.py.test.in  Comp.py.test.in  Compc.py.test.in  Copy_netcdf.py.test.in  Dayarith.py.test.in  Detrend.py.test.in  EOF.py.test.in  EOFcoeff.py.test.in  Eca.py.test.in  Enspctl.py.test.in  Ensstat.py.test.in  Etccdi.py.test.in  Expr.py.test.in  File.py.test.in  Filter.py.test.in  Fldpctl.py.test.in  Fldstat.py.test.in  Fldstat2.py.test.in  Genweights.py.test.in  Gradsdes.py.test.in  Gridarea.py.test.in  Gridboxstat.py.test.in  Inttime.py.test.in  Intyear.py.test.in  Isosurface.py.test.in  Maggraph.py.test.in  Magplot.py.test.in  Magvector.py.test.in  Makefile.am  Makefile.in  MapReduce.py.test.in  Maskregion.py.test.in  (+54 more)
