## Process this file with automake to produce Makefile.in
noinst_LTLIBRARIES = libcdo.la
libcdo_la_SOURCES =		after_dvtrans.cc          \
				after_fctrans.cc          \
				after_namelist.cc         \
				after_sptrans.cc          \
				afterburner.h             \
				afterburnerlib.cc         \
				bitinformation.cc         \
				bitinformation.h          \
				cdi_lockedIO.cc           \
				cdi_lockedIO.h            \
				cdi_uuid.h                \
				cdoStream.cc              \
				cdoStream.h               \
				cdo_apply.cc              \
				cdo_apply.h	          \
				cdo_cdi_wrapper.cc        \
				cdo_cdi_wrapper.h         \
				cdo_cmor.h                \
				cdo_default_values.cc     \
				cdo_default_values.h      \
				cdo_features.cc           \
				cdo_features.h            \
				cdo_fctrans.cc            \
				cdo_fctrans.h	          \
				cdo_fft.cc                \
				cdo_fft.h                 \
				cdo_fill.cc               \
				cdo_fill.h                \
				cdo_getopt.cc             \
				cdo_getopt.h              \
				cdo_history.cc            \
				cdo_history.h             \
				cdo_math.cc               \
				cdo_math.h                \
				cdo_options.cc            \
				cdo_options.h             \
				cdo_output.cc             \
				cdo_output.h              \
				cdo_pthread.cc            \
				cdo_pthread.h             \
				cdo_query.cc              \
				cdo_query.h               \
				cdo_read.cc               \
				cdo_rlimit.cc             \
				cdo_rlimit.h              \
				cdo_season.cc             \
				cdo_season.h              \
				cdo_syntax_error.cc             \
				cdo_syntax_error.h              \
				cdo_node_attach_exception.h              \
				cdo_exception.h              \
				cdo_task.cc               \
				cdo_task.h                \
				cdo_varlist.cc            \
				cdo_varlist.h             \
				cdo_vlist.cc              \
				cdo_vlist.h               \
				cdo_wtime.h               \
				cdo_zaxis.cc              \
				cdo_zaxis.h               \
				cf_interface.h            \
				cfortran.h                \
				cfortran.h                \
				cimdOmp.cc                \
				cimdOmp.h                 \
				cmortable_parser.cc       \
				color.cc                  \
				color.h                   \
				commandline.cc            \
				commandline.h             \
				compare.h                 \
				const.h                   \
				constants.cc              \
				constants.h               \
				convert_units.cc          \
				convert_units.h           \
				counter.h                 \
				cthread_debug.cc          \
				cthread_debug.h           \
				custom_modules.cc         \
				custom_modules.h          \
				dcw_reader.cc             \
				dcw_reader.h              \
				datarangelist.h           \
				datetime.cc               \
				datetime.h                \
				dmemory.h                 \
				ecacore.cc                \
				ecacore.h                 \
				ecautil.cc                \
				ecautil.h                 \
				eigen_solution.cc         \
				eigen_solution.h          \
				expr.cc                   \
				expr.h                    \
				expr_fun.cc               \
				expr_fun.h                \
				expr_lex.cc               \
				expr_yacc.cc              \
				expr_yacc.hh              \
				field.cc                  \
				field.h                   \
				field_functions.h         \
				field2.cc                 \
				field2_complex.cc         \
				fieldc.cc                 \
				fieldc_complex.cc         \
				field_memory.cc           \
				field_meridional.cc       \
				field_zonal.cc            \
				field_vinterp.cc          \
				field_vinterp.h           \
				fileStream.cc             \
				fileStream.h              \
				eof_mode.cc               \
				eof_mode.h	          \
				gaussian_latitudes.c      \
				gaussian_latitudes.h      \
				getMemorySize.c           \
				getRSS.c                  \
				grid_area.cc              \
				grid_define.cc            \
				grid_define.h             \
				grid_from_name.cc         \
				grid_gme.cc               \
				grid_icosphere.cc         \
				grid_point_search.cc      \
				grid_point_search.h       \
				grid_print.cc             \
				grid_read.cc              \
				grid_read_pingo.cc        \
				grid_read_pingo.h         \
				griddes.cc                \
				griddes.h                 \
				griddes_h5.cc             \
				griddes_nc.cc             \
				hetaeta.cc                \
				hetaeta.h                 \
				institution.cc            \
				institution.h             \
				interpol.cc               \
				interpol.h                \
				knn_weights.h             \
				libncl.h                  \
				listbuffer.h              \
				mapping.cc                \
				mapping.h                 \
				matrix_view.h             \
				merge_axis.cc             \
				merge_axis.h              \
				module_definitions.h      \
				module_list.h             \
				module_info.cc            \
				module_info.h             \
				module_static_maps.h	  \
				module_static_maps.cc 	  \
				modules.cc                \
				modules.h                 \
				mpim_grid/grid_convert.h  \
				mpim_grid/grid_proj.cc    \
				mpim_grid/grid_proj.h     \
				mpim_grid/grid_rot.cc     \
				mpim_grid/grid_rot.h      \
				mpim_grid/grid_healpix.cc \
				mpim_grid/grid_healpix.h  \
				mpim_grid/gridreference.cc\
				mpim_grid/gridreference.h \
				mpim_grid/mpim_grid.cc    \
				mpim_grid/mpim_grid.h     \
				mpmo.cc                   \
				mpmo.h                    \
				mpmo_color.cc             \
				mpmo_color.h              \
				namelist.cc               \
				namelist.h                \
				nanoflann.hpp             \
				operator_help.h           \
				par_io.cc                 \
				par_io.h                  \
				param_conversion.cc       \
				param_conversion.h        \
				parse_literals.cc         \
				parse_literals.h          \
				percentiles.cc            \
				percentiles.h             \
				percentiles_hist.cc       \
				percentiles_hist.h        \
				pipe.cc                   \
				pipe.h                    \
				pipeStream.cc             \
				pipeStream.h              \
				pmlist.cc                 \
				pmlist.h                  \
				printinfo.cc              \
				printinfo.h               \
				process.cc                \
				process.h                 \
				processManager.cc         \
				processManager.h          \
				parser.h\
				parser.cc\
				node.cc         \
				node.h          \
				process_int.cc            \
				process_int.h             \
				progress.cc               \
				progress.h                \
				pthread_debug.cc          \
				pthread_debug.h           \
				readline.cc               \
				readline.h                \
				realtime.cc               \
				region.h                  \
				region.cc                 \
				remap.h                   \
				remap_bicubic.cc          \
				remap_bilinear.cc         \
				remap_cell_search.cc      \
				remap_conserv.cc          \
				remap_conserv_scrip.cc    \
				remap_distwgt.cc          \
				remap_grid_cell_search.cc \
				remap_grid_cell_search.h  \
				remap_point_search.cc     \
				remap_scrip_io.cc         \
				remap_search_latbins.cc   \
				remap_search_reg2d.cc     \
				remap_store_link.cc       \
				remap_store_link.h        \
				remap_store_link_cnsrv.cc \
				remap_store_link_cnsrv.h  \
				remap_vars.cc             \
				remap_vars.h              \
				remaplib.cc               \
				remapsort.cc              \
				selboxinfo.h              \
				sellist.cc                \
				sellist.h                 \
				specspace.cc              \
				specspace.h               \
				statistic.cc              \
				statistic.h               \
				stdnametable.cc           \
				stdnametable.h            \
				table.cc                  \
				table.h                   \
				timer.cc                  \
				timer.h                   \
				transform.h               \
				util_fileextensions.cc    \
				util_fileextensions.h     \
				util_files.cc             \
				util_files.h              \
				util_string.cc            \
				util_string.h             \
				util_wildcards.cc         \
				util_wildcards.h          \
				util_date.h               \
				varray.cc                 \
				varray.h                  \
				vector3d.h                \
				verifygrid.h              \
				vertical_interp.cc        \
				vertical_interp.h         \
				vertint_util.h		  \
				vertint_util.cc	          \
				zaxis_print.cc
libcdo_la_SOURCES +=                                      \
				json/jsmn.h               \
				json/jsmn.c
libcdo_la_SOURCES +=                                              \
				kdtreelib/kdtree.h                \
				kdtreelib/kdtree_cartesian.cc     \
				kdtreelib/kdtree_common.cc        \
				kdtreelib/kdtree_spherical.cc     \
				kdtreelib/qsort.cc                \
				kdtreelib/pmergesort.cc           \
				kdtreelib/pqueue.cc               \
				kdtreelib/pqueue.h
#
libcdo_la_SOURCES +=		etopo.dat temp.dat mask.dat

#
bin_PROGRAMS = cdo
#
cdo_SOURCES  = cdo.cc
cdo_SOURCES +=                  Adisit.cc            \
				Afterburner.cc       \
				Arith.cc             \
				Arithc.cc            \
				Arithdays.cc         \
				Arithlat.cc          \
				Bitrounding.cc       \
				Cat.cc               \
				CDIread.cc           \
				CDItest.cc           \
				CDIwrite.cc          \
				Change.cc            \
				Change_e5slm.cc      \
				Cloudlayer.cc        \
				CMOR.cc              \
				CMOR_lite.cc         \
				CMOR_table.cc        \
				Collgrid.cc          \
				Command.cc           \
				Comp.cc              \
				Compc.cc             \
				Complextorect.cc     \
				Cond.cc              \
				Cond2.cc             \
				Condc.cc             \
				Consecstat.cc        \
				Copy.cc              \
				DCW_util.cc          \
				Dayarith.cc          \
				Deltat.cc            \
				Deltime.cc           \
				Depth.cc             \
				Derivepar.cc         \
				Detrend.cc           \
				Diff.cc              \
				Distgrid.cc          \
				Duplicate.cc         \
				EOFs.cc              \
				Eof3d.cc             \
				EcaIndices.cc        \
				EcaEtccdi.cc         \
			        Echam5ini.cc         \
				Enlarge.cc           \
				Enlargegrid.cc       \
				Ensstat.cc           \
				Ensstat3.cc          \
				Ensval.cc            \
				Eofcoeff.cc          \
				Eofcoeff3d.cc        \
				EstFreq.cc           \
				Exprf.cc             \
				FC.cc                \
				Filedes.cc           \
				Fillmiss.cc          \
				Filter.cc            \
				Fldrms.cc            \
				Fldstat.cc           \
				Fldstat2.cc          \
				Fourier.cc           \
				Gengrid.cc           \
				Gradsdes.cc          \
				Gridboxstat.cc       \
				Gridcell.cc          \
				Gridsearch.cc        \
				Harmonic.cc          \
				Healpix.cc           \
				Hi.cc                \
				Histogram.cc         \
				Importamsr.cc        \
				Importbinary.cc      \
				Importcmsaf.cc       \
				Importobs.cc         \
				Importfv3grid.cc     \
				Info.cc              \
				Input.cc             \
				Intgrid.cc           \
				Intgridtraj.cc       \
				Intlevel.cc          \
				Intlevel3d.cc        \
				Intntime.cc          \
				Inttime.cc           \
				Intyear.cc           \
				Invert.cc            \
				Invertlev.cc         \
				Lic.cc               \
				Longinfo.cc          \
				MapReduce.cc         \
				Maskbox.cc           \
				Mastrfu.cc           \
				Math.cc              \
				Merge.cc             \
				Mergegrid.cc         \
				Mergetime.cc         \
				Merstat.cc           \
				Monarith.cc          \
				Mrotuv.cc            \
				Mrotuvb.cc           \
				NCL_wind.cc          \
				Ninfo.cc             \
				Nmldump.cc           \
				Output.cc            \
				Outputgmt.cc         \
				Pack.cc              \
				Pardup.cc            \
				Pinfo.cc             \
				Pressure.cc          \
				Query.cc             \
				Recttocomplex.cc     \
				Regres.cc            \
				Remap.cc             \
				Remapweights.cc      \
				Remapeta.cc          \
				Remapstat.cc         \
				Replace.cc           \
				Replacevalues.cc     \
				Rhopot.cc            \
				Rotuv.cc             \
				Runpctl.cc           \
				Runstat.cc           \
				Samplegrid.cc        \
				Samplegridicon.cc    \
				Seascount.cc         \
				Seaspctl.cc          \
				Seasstat.cc          \
				Seasmonstat.cc       \
				Selbox.cc            \
				Selgridcell.cc       \
				Select.cc            \
				Selmulti.cc          \
				Seloperator.cc       \
				Selrec.cc            \
				Selregion.cc         \
				Selsurface.cc        \
				Seltime.cc           \
				Selvar.cc            \
				Selyearidx.cc        \
				Set.cc               \
				Setattribute.cc      \
				Setbox.cc            \
				Setgrid.cc           \
				Setgridcell.cc       \
				Sethalo.cc           \
				Setmiss.cc           \
				Setpartab.cc         \
				Setrcaname.cc        \
				Settime.cc           \
				Setzaxis.cc          \
				Shiftxy.cc           \
				Showinfo.cc          \
				Showattribute.h      \
				Showattribute.cc     \
				Sinfo.cc             \
				Smooth.cc            \
				Sort.cc              \
				Sorttimestamp.cc     \
				Specinfo.cc          \
				Spectral.cc          \
				Spectrum.cc          \
				Split.cc             \
				Splitdate.cc         \
				Splitrec.cc          \
				Splitsel.cc          \
				Splittime.cc         \
				Splityear.cc         \
				Tee.cc               \
				Templates.cc         \
				Test.cc              \
				Tests.cc             \
				Timcount.cc          \
				Timcumsum.cc         \
				Timfill.cc           \
				Timpctl.cc           \
				Timselpctl.cc        \
				Timselstat.cc        \
				Timsort.cc           \
				Timstat.cc           \
				Timstat2.cc          \
				Timstat3.cc          \
				Tinfo.cc             \
				Tocomplex.cc         \
				Transpose.cc         \
				Trend.cc             \
				Trendarith.cc        \
				Tstepcount.cc        \
				Unpack.cc            \
				Vargen.cc            \
				Varrms.cc            \
				Varsstat.cc          \
				Vertintap.cc         \
				Vertintgh.cc         \
				Vertintml.cc         \
				Vertintzs.cc         \
				Vertstat.cc          \
				Vertcum.cc           \
				Vertwind.cc          \
				Verifygrid.cc        \
				Wct.cc               \
				Wind.cc              \
				WindTrans.cc         \
				Writegrid.cc         \
				Writerandom.cc       \
				XTimstat.cc          \
				Yeararith.cc         \
				Yearmonstat.cc       \
				Ydayarith.cc         \
				Ydaypctl.cc          \
				Ydaystat.cc          \
				Ydrunpctl.cc         \
				Ydrunstat.cc         \
				Yhourarith.cc        \
				Yhourstat.cc         \
				Ymonarith.cc         \
				Ymoncomp.cc          \
				Ymonpctl.cc          \
				Ymonstat.cc          \
				Yseaspctl.cc         \
				Yseasstat.cc         \
				Zonstat.cc

#if ENABLE_MAGICS
cdo_SOURCES +=			Maggraph.cc                     \
				Magplot.cc                      \
				Magvector.cc                    \
				template_parser.h               \
				template_parser.cc              \
				results_template_parser.h       \
				results_template_parser.cc      \
				magics_template_parser.h        \
				magics_template_parser.cc       \
				cdo_magics_mapper.h             \
				cdo_magics_mapper.cc
#endif

cdo_CPPFLAGS = -I$(top_srcdir)/libcdi/src -I$(top_srcdir)/src/mpim_grid
cdo_CPPFLAGS += -DYAC_FOR_CDO
cdo_LDADD    = libcdo.la $(top_builddir)/libcdi/src/libcdi.la
cdo_LDADD   += $(top_builddir)/src/lib/yac/libyac.la
cdo_LDADD   += $(top_builddir)/src/lib/gradsdes/libgradsdes.la
cdo_LDADD   += $(top_builddir)/src/lib/healpix/libhealpix.la
if USE_F77
cdo_LDADD   += $(top_builddir)/src/lib/ncl/libncl.la
endif
cdo_LDFLAGS  =

if ENABLE_ALL_STATIC
cdo_LDFLAGS  += -all-static
endif

libcdo_la_CPPFLAGS = $(cdo_CPPFLAGS)
noinst_PROGRAMS  = cdotest
cdotest_SOURCES  = cdotest.cc
cdotest_LDADD    = $(cdo_LDADD)
cdotest_CPPFLAGS = $(cdo_CPPFLAGS)
cdotest_LDFLAGS  = $(cdo_LDFLAGS)
if ENABLE_ALL_STATIC
cdotest_LDFLAGS  += -all-static
endif

CLEANFILES  = `ls *~ 2> /dev/null`
#
clean-local: clean-local-dirs
.PHONY: clean-local-dirs
clean-local-dirs:
	-rm -rf *.dSYM
